scrollbar issue fix

--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -27,3 +27,10 @@ body{
 .green{
   color: green;
 }
+
+@media screen and (min-width: 960px) {
+  html {
+    margin-left: calc(100vw - 100%);
+    margin-right: 0;
+  }
+}
